--- a/index.html
+++ b/index.html
@@ -2,6 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Everyday Better is a productivity app that helps you build positive habits and improve your life step by step."
+    />
+    <meta
+      name="keywords"
+      content="productivity, habits, goals, improvement, everyday better"
+    />
+    <meta name="author" content="Nguyen" />
+    <meta property="og:title" content="Everyday Better" />
+    <meta
+      property="og:description"
+      content="Build habits, track progress, and improve your life with Everyday Better."
+    />
+    <meta property="og:image" content="/mini-logo.png" />
+    <meta property="og:url" content="https://oak.readresolve.tech/" />
+    <meta property="og:type" content="website" />
     <link rel="icon" href="/mini-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Everyday better</title>
